--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -7,6 +7,7 @@ disabled_rules:
 - trailing_whitespace
 - vertical_whitespace
 - weak_delegate # too many false positives (or negatives?)
+- todo
 
 statement_position:
 statement_mode: uncuddled_else
